# investor

./: .env.example  .gitignore  README.md  backtest_20_years.py  compare_strategies_20y.py  data_downloader.py  data_downloader_examples.py  download_manager.py  example_push_commands.txt  github_commands.sh  open_to_close_strategy.py  pyproject.toml  quick_test_downloader.py  requirements.txt  simple_test.py  strategy_analysis.py  test_incremental_updates.py  test_strategies.py  test_strategy.py
.github/: copilot-instructions.md
backtesting/: __init__.py  base_strategy.py  strategy_manager.py
docs/: project_structure.md
example_data/: multi_sheet_data.xlsx  tech_stocks.xlsx
examples/: close_to_open_example.py
src/: __init__.py  analyzer.py  backtester.py  close_to_open_strategy.py  data_fetcher.py  main.py  portfolio.py
strategies/: README.md  __init__.py
strategies/buy_and_hold/: __init__.py  buy_and_hold_strategy.py
strategies/up_on_down_day/: market_analyzer.py  up_on_down_day_strategy.py
test_data/: custom_tickers_data.csv  download_report.csv  test_stocks.xlsx
test_data/custom/: AAPL_historical_data.csv  GOOGL_historical_data.csv  MSFT_historical_data.csv
test_data/metadata/: download_metadata.json
tests/: test_data_downloader.py  test_data_fetcher.py  test_portfolio.py
